# pam_ldap2krb

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  pam_ldap2krb.spec
conf/: Makefile.am  pam_ldap2krb.conf
src/: Makefile.am  pam_ldap2krb.c
